# time_series_forecaster

./: pyproject.toml
data/: output.csv
tests/: test_forecaster.py
time_series_forecaster/: custom_cv.py  forecaster.py  predict.py
